favicons and syntax highlighting

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook:
   flickr:
   github: quintonjason/quintonjason.github.io
-  instagram: quintonjason
+  instagram: quintonjasonjr
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
