--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Quinton Jason
 description: Front End Developer living in Baton Rouge, Louisiana
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/quintonjason/quintonjaosn.github.io/master/images/jekyll-logo.png
+avatar: /images/qjlogo.svg
 
 #
 # Flags below are optional
