homepage and footer cleanup

--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ avatar: /images/qjlogo.svg
 footer-links:
   dribbble:
   email: quinton.jason@gmail.com
-  facebook:
+  facebook: quinton.jason
   flickr:
   github: quintonjason/quintonjason.github.io
   instagram: quintonjasonjr
-  linkedin:
+  linkedin: quintonjason
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: quintonjasonjr
