--- a/_config.yml
+++ b/_config.yml
@@ -72,10 +72,14 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
+# Set the pagination for the homepage and blog
+paginate: 4
+
 # Use the following plug-ins
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-paginate
 
 # Exclude these files from your production _site
 exclude:
