--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "gatsby-plugin-google-fonts": "0.0.3",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.15",
+    "gatsby-plugin-sharp": "^1.6.24",
     "gatsby-plugin-typography": "^1.7.10",
+    "gatsby-remark-copy-linked-files": "^1.5.25",
+    "gatsby-remark-images": "^1.5.36",
     "gatsby-remark-prismjs": "^1.2.11",
+    "gatsby-remark-responsive-image": "^1.0.0-alpha13-alpha.435e0178",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.26",
+    "gatsby-transformer-sharp": "^1.6.16",
     "glamorous": "^4.11.2",
     "react-fontawesome": "^1.6.1",
     "typography-theme-kirkham": "^0.16.3"
