--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-link": "^1.6.32",
     "gatsby-paginate": "^1.0.9",
     "gatsby-plugin-glamor": "^1.6.10",
+    "gatsby-plugin-google-analytics": "^1.0.15",
     "gatsby-plugin-google-fonts": "0.0.3",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.15",
