--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "es6-promise": "^4.2.2",
     "fs": "0.0.1-security",
+    "fs.extra": "^1.3.2",
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
     "gatsby-paginate": "^1.0.9",
@@ -28,13 +29,16 @@
     "gatsby-transformer-remark": "^1.7.26",
     "gatsby-transformer-sharp": "^1.6.16",
     "glamorous": "^4.11.2",
+    "gsap": "^1.20.3",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "progress": "^2.0.0",
     "react-fontawesome": "^1.6.1",
     "react-gist": "^1.2.1",
+    "sharp": "^0.20.1",
     "slash": "^1.0.0",
+    "spotify-web-api-node": "^2.5.0",
     "styled-components": "^3.0.2",
     "typography-theme-kirkham": "^0.16.3"
   },
