--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "version": "1.0.0",
   "author": "Quinton Jason <quinton.jason@gmail.com>",
   "dependencies": {
-    "es6-promise": "^4.2.2",
+    "es6-promise": "^4.2.4",
     "fs": "0.0.1-security",
     "fs.extra": "^1.3.2",
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
-    "gatsby-paginate": "^1.0.9",
-    "gatsby-plugin-glamor": "^1.6.10",
-    "gatsby-plugin-google-analytics": "^1.0.15",
+    "gatsby-paginate": "^1.0.13",
+    "gatsby-plugin-glamor": "^1.6.13",
+    "gatsby-plugin-google-analytics": "^1.0.24",
     "gatsby-plugin-google-fonts": "0.0.3",
-    "gatsby-plugin-offline": "^1.0.12",
+    "gatsby-plugin-offline": "^1.0.15",
     "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sass": "^1.0.15",
-    "gatsby-plugin-sharp": "^1.6.24",
-    "gatsby-plugin-styled-components": "^2.0.5",
-    "gatsby-plugin-typography": "^1.7.10",
-    "gatsby-remark-copy-linked-files": "^1.5.25",
-    "gatsby-remark-images": "^1.5.36",
-    "gatsby-remark-prismjs": "^1.2.11",
-    "gatsby-remark-responsive-iframe": "^1.4.16",
+    "gatsby-plugin-sass": "^1.0.19",
+    "gatsby-plugin-sharp": "^1.6.41",
+    "gatsby-plugin-styled-components": "^2.0.9",
+    "gatsby-plugin-typography": "^1.7.18",
+    "gatsby-remark-copy-linked-files": "^1.5.30",
+    "gatsby-remark-images": "^1.5.56",
+    "gatsby-remark-prismjs": "^1.2.20",
+    "gatsby-remark-responsive-iframe": "^1.4.18",
     "gatsby-remark-responsive-image": "^1.0.0-alpha13-alpha.435e0178",
-    "gatsby-source-filesystem": "^1.5.11",
-    "gatsby-transformer-json": "^1.0.14",
-    "gatsby-transformer-remark": "^1.7.26",
-    "gatsby-transformer-sharp": "^1.6.16",
-    "glamorous": "^4.11.2",
-    "gsap": "^1.20.3",
+    "gatsby-source-filesystem": "^1.5.27",
+    "gatsby-transformer-json": "^1.0.16",
+    "gatsby-transformer-remark": "^1.7.37",
+    "gatsby-transformer-sharp": "^1.6.22",
+    "glamorous": "^4.12.1",
+    "gsap": "^1.20.4",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
@@ -39,7 +39,7 @@
     "sharp": "^0.20.1",
     "slash": "^1.0.0",
     "spotify-web-api-node": "^2.5.0",
-    "styled-components": "^3.0.2",
+    "styled-components": "^3.2.3",
     "typography-theme-kirkham": "^0.16.3"
   },
   "keywords": [
@@ -54,6 +54,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.9.2"
+    "prettier": "^1.9.2",
+    "url-loader": "^1.0.1"
   }
 }
