--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gatsby-plugin-postcss-sass": "^1.0.18",
+    "lost": "^8.2.1",
     "prettier": "^1.9.2",
     "url-loader": "^1.0.1"
   }
