--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "css-loader": "^0.28.11",
     "gatsby-plugin-postcss-sass": "^1.0.18",
     "lost": "^8.2.1",
     "prettier": "^1.9.2",
