--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fs": "0.0.1-security",
     "fs.extra": "^1.3.2",
     "gatsby": "^1.9.145",
+    "gatsby-cli": "^2.7.30",
     "gatsby-link": "^1.6.32",
     "gatsby-paginate": "^1.0.13",
     "gatsby-plugin-glamor": "^1.6.13",
