--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Quinton Jason <quinton.jason@gmail.com>",
   "dependencies": {
+    "ajv-keywords": "^3.4.1",
     "es6-promise": "^4.2.4",
     "fs": "0.0.1-security",
     "fs.extra": "^1.3.2",
@@ -31,13 +32,17 @@
     "gatsby-transformer-sharp": "^1.6.22",
     "glamorous": "^4.12.1",
     "gsap": "^1.20.4",
+    "ink": "^2.3.0",
+    "ink-spinner": "^3.0.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "progress": "^2.0.0",
     "react-fontawesome": "^1.6.1",
     "react-gist": "^1.2.1",
+    "react-reconciler": "^0.21.0",
     "react-transition-group": "^2.3.0",
+    "schema-utils": "^2.1.0",
     "sharp": "^0.20.1",
     "slash": "^1.0.0",
     "spotify-web-api-node": "^2.5.0",
@@ -60,6 +65,6 @@
     "gatsby-plugin-postcss-sass": "^1.0.18",
     "lost": "^8.2.1",
     "prettier": "^1.9.2",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.1.2"
   }
 }
