--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-glamor": "^1.6.13",
     "gatsby-plugin-google-analytics": "^1.0.24",
     "gatsby-plugin-google-fonts": "0.0.3",
+    "gatsby-plugin-manifest": "^2.2.6",
     "gatsby-plugin-offline": "^1.0.15",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.19",
@@ -43,7 +44,7 @@
     "react-reconciler": "^0.21.0",
     "react-transition-group": "^2.3.0",
     "schema-utils": "^2.1.0",
-    "sharp": "^0.20.1",
+    "sharp": "^0.20.8",
     "slash": "^1.0.0",
     "spotify-web-api-node": "^2.5.0",
     "styled-components": "^3.2.3",
@@ -66,5 +67,11 @@
     "lost": "^8.2.1",
     "prettier": "^1.9.2",
     "url-loader": "^1.1.2"
+  },
+  "peerDependencies": {
+    "ajv": "^6.9.1",
+    "react": "16.8.2",
+    "webpack": "3.0.0",
+    "gatsby": "2.4.0"
   }
 }
