--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ajv-keywords": "^3.4.1",
     "babel-plugin-styled-components": "^1.10.6",
     "es6-promise": "^4.2.4",
+    "extract-text-webpack-plugin": "^1.0.1",
     "fs": "0.0.1-security",
     "fs.extra": "^1.3.2",
     "gatsby": "^1.9.145",
@@ -71,8 +72,8 @@
   },
   "peerDependencies": {
     "ajv": "^6.9.1",
+    "gatsby": "2.4.0",
     "react": "16.8.2",
-    "webpack": "3.0.0",
-    "gatsby": "2.4.0"
+    "webpack": "3.0.0"
   }
 }
