--- a/package.json
+++ b/package.json
@@ -6,51 +6,55 @@
   "dependencies": {
     "ajv-keywords": "^3.4.1",
     "babel-plugin-styled-components": "^1.10.6",
-    "es6-promise": "^4.2.4",
+    "es6-promise": "^4.2.8",
     "extract-text-webpack-plugin": "^1.0.1",
     "fs": "0.0.1-security",
     "fs.extra": "^1.3.2",
-    "gatsby": "^1.9.145",
-    "gatsby-cli": "^2.7.30",
-    "gatsby-link": "^1.6.32",
-    "gatsby-paginate": "^1.0.13",
+    "gatsby": "^2.13.76",
+    "gatsby-cli": "^2.7.37",
+    "gatsby-link": "^2.2.9",
+    "gatsby-paginate": "^1.1.1",
     "gatsby-plugin-glamor": "^1.6.13",
-    "gatsby-plugin-google-analytics": "^1.0.24",
+    "gatsby-plugin-google-analytics": "^2.1.9",
     "gatsby-plugin-google-fonts": "0.0.3",
-    "gatsby-plugin-manifest": "^2.2.6",
-    "gatsby-plugin-offline": "^1.0.15",
+    "gatsby-plugin-manifest": "^2.2.8",
+    "gatsby-plugin-offline": "^1.0.18",
     "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sass": "^1.0.19",
-    "gatsby-plugin-sharp": "^1.6.41",
-    "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-plugin-typography": "^1.7.18",
-    "gatsby-remark-copy-linked-files": "^1.5.30",
-    "gatsby-remark-images": "^1.5.56",
-    "gatsby-remark-prismjs": "^1.2.20",
-    "gatsby-remark-responsive-iframe": "^1.4.18",
+    "gatsby-plugin-sass": "^2.1.11",
+    "gatsby-plugin-sharp": "^2.2.16",
+    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-typography": "^1.7.19",
+    "gatsby-remark-copy-linked-files": "^2.1.9",
+    "gatsby-remark-images": "^3.1.16",
+    "gatsby-remark-prismjs": "^3.3.8",
+    "gatsby-remark-responsive-iframe": "^2.2.7",
     "gatsby-remark-responsive-image": "^1.0.0-alpha13-alpha.435e0178",
-    "gatsby-source-filesystem": "^1.5.27",
-    "gatsby-transformer-json": "^1.0.16",
-    "gatsby-transformer-remark": "^1.7.37",
-    "gatsby-transformer-sharp": "^1.6.22",
-    "glamorous": "^4.12.1",
-    "gsap": "^1.20.4",
+    "gatsby-source-filesystem": "^2.1.14",
+    "gatsby-transformer-json": "^1.0.20",
+    "gatsby-transformer-remark": "^2.6.18",
+    "gatsby-transformer-sharp": "^2.2.10",
+    "glamorous": "^5.0.0",
+    "gsap": "^2.1.3",
     "ink": "^2.3.0",
     "ink-spinner": "^3.0.1",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.15",
     "mkdirp": "^0.5.1",
-    "progress": "^2.0.0",
+    "prismjs": "^1.17.1",
+    "progress": "^2.0.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-fontawesome": "^1.6.1",
     "react-gist": "^1.2.1",
     "react-reconciler": "^0.21.0",
-    "react-transition-group": "^2.3.0",
+    "react-router-dom": "^5.0.1",
+    "react-transition-group": "^4.2.2",
     "schema-utils": "^2.1.0",
     "sharp": "^0.20.8",
     "slash": "^1.0.0",
     "spotify-web-api-node": "^2.5.0",
     "styled-components": "^3.4.10",
-    "typography-theme-kirkham": "^0.16.3"
+    "typography-theme-kirkham": "^0.16.19"
   },
   "keywords": [
     "gatsby"
@@ -65,9 +69,9 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
-    "gatsby-plugin-postcss-sass": "^1.0.18",
+    "gatsby-plugin-postcss-sass": "^1.0.22",
     "lost": "^8.2.1",
-    "prettier": "^1.9.2",
+    "prettier": "^1.18.2",
     "url-loader": "^1.1.2"
   },
   "peerDependencies": {
